# goit-pythonweb-hw-10

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  start.sh
migrations/: env.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  users.py
